<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BriteBlox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello World, Login!</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected</string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="close">BT Disconnect</string>
    <string name="clear">Clear List</string>
    <string name="routeInfo">Route Id: 123456 Driver: Sheppard</string>
    <string name="routeStartEnd">Start-10:33am End-11:55am</string>
    <string name="pickStats">Picked: 1, Missed: 0, Left to Pick: 0</string>
    <string name="userName">Test</string>
    <string name="truckId">5</string>
    <string name="continous">Continuous</string>
    <string name="connectfirst">Connect to Bluetooth Serial</string>
    <string name="disconnected">Disconnected</string>
    <string name="entermessage">Enter your message below:</string>
    <string name="sendout">Send</string>
</resources>
